--- a/Data_processing/environment.yml
+++ b/Data_processing/environment.yml
@@ -14,6 +14,7 @@ dependencies:
 - pillow==4.0.0
 - seaborn==0.7.1
 - h5py==2.7.0
+- scikit-image==0.13.1  
 - pip:
   - tensorflow==1.1.0
   - keras==2.0.4
