Signed-off-by: Klhnikov Riton <parisot.eric.mail@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+Pics/
+
+
 # Vim
 *.py~
 *.py.swp
@@ -8,8 +11,6 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-# C extensions
-*.so
 
 # Distribution / packaging
 .Python
